--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -7,7 +7,16 @@
 .text {
   margin: 5px 10px 10px 10px;
   text-align: right;
+  font-weight: bold;
 }
 .companion {
   text-align: left;
+}
+
+.message {
+  border-radius: 15px;
+  transition: all 0.3s ease-in;
+  background-color: #b6b6b6;
+  padding: 5px;
+  margin-bottom: 10px;
 }
