--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -12,7 +12,7 @@
     padding: 30px;
     background-color: #b6b6b6;
     border-radius: 16px;
-    min-width: 350px;
+    min-width: 325px;
 }
 
 .popup.active {
@@ -49,4 +49,11 @@
 
 .button:hover {
     background-color: #7b7b7b;
+}
+
+@media screen and (max-width: 720px) {
+    .popupContent {
+        padding: 10px;
+        box-sizing: border-box;
+    }
 }
